# ragtime

./: .env.example  .gitignore  .pre-commit-config.yaml  .prototools  .release-please-manifest.json  .worktreeinclude  AGENTS.md  CHANGELOG.md  CONTRIBUTING.md  README.md  TEST_PLAN.md  install.ps1  install.sh  justfile  pyproject.toml  ragfacile.toml  release-please-config.json
.github/: dependabot.yml
.github/workflows/: build-release-asset.yml  check-albert-version.yml  check-install.yml  checks.yml  sync-templates-on-release.yml  test-install.yml
.moon/templates/albert/: template.yml
.moon/templates/albert-client/: pyproject.toml
.moon/templates/chainlit-chat/: .env.example  .envrc  README.md  app.py  modules.yml  pyproject.toml  template.yml
.moon/templates/config/: pyproject.toml  template.yml
.moon/templates/context/: pyproject.toml
.moon/templates/rag-core/: README.md  (+2 more)
apps/chainlit-chat/: README.md  app.py  justfile  pyproject.toml
apps/cli/: .env.example  README.md  pyproject.toml
apps/rag-eval/: moon.yml  pyproject.toml
apps/reflex-chat/: README.md  justfile  modules.yml  pyproject.toml  rxconfig.py
docs/: README.md  evaluation.md
docs/guides/: ci-cd-windows.md  getting-started.md  how-rag-works.md  proxy-setup.md  supabase-setup.md
docs/reference/: components.md  rag-science.md  ragfacile-toml.md
docs/technical/: ISSUE_46_INVESTIGATION.md  ISSUE_46_RESEARCH.md  ISSUE_46_SUMMARY.md
docs/troubleshooting/: proxy.md
supabase/migrations/: 00000000000000_tracing.sql  00000000000001_chainlit.sql
tools/: generate_templates.py  moon.yml
(+120 files in other folders)
