[project]
name = "{{ project_name }}"
version = "0.1.0"
description = "{{ description }}"
readme = "README.md"
requires-python = ">=3.13"
dependencies = [
    "chainlit>=1.3.0",
    "openai>=1.0.0",
    "python-dotenv>=1.0.0",
{%- if use_pdf %}
    "pdf-context",
{%- endif %}
{%- if use_chroma %}
    "chroma-context",
{%- endif %}
]

[project.scripts]
chainlit-chat = "chainlit.cli:run"
{% if use_pdf or use_chroma %}
[tool.uv.sources]
{%- if use_pdf %}
pdf-context = { workspace = true }
{%- endif %}
{%- if use_chroma %}
chroma-context = { workspace = true }
{%- endif %}
{% endif %}
[tool.uv]
package = true
