[project]
name = "{{ project_name }}"
version = "0.9.0" # x-release-please-version
description = "{{ description }}"
readme = "README.md"
requires-python = ">=3.13"
dependencies = [
    "albert-client",
    "chainlit>=1.3.0",
    "rag-core",
    "retrieval-basic",
    "python-dotenv>=1.0.0",
    "pyyaml>=6.0.0",
]

[project.scripts]
chainlit-chat = "chainlit.cli:run"

[tool.setuptools]
py-modules = ["app", "context_loader"]

[tool.uv.sources]
albert-client = { workspace = true }
rag-core = { workspace = true }
retrieval-basic = { workspace = true }

[tool.uv]
package = true
